# iCube_qt_gui

./: .gitignore  CMakeLists.txt  README.md  package.xml
gui/: emojiface.ui  main_window.ui  settings_screen.ui  splash_screen.ui
include/icube_gui/: collision_indicator.h  global_defs.h
include/icube_gui/Tools/: console.h  robotCommunication.h
include/icube_gui/ui/: emojiface.h  main_window.h  settings_screen.h
resources/: qt_resources.qrc
src/: collision_indicator.cpp  main.cpp
src/Tools/: console.cpp  robotCommunication.cpp
src/ui/: emojiface.cpp  main_window.cpp  settings_screen.cpp
tests/: test.cpp
